# gql-book-server

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  fly.toml  pyproject.toml
gql_book_server/: books.py  fastapi_server.py  server.py
